--- a/BeagleSampleAndroid/app/src/main/AndroidManifest.xml
+++ b/BeagleSampleAndroid/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <application
         android:name=".AppApplication"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
