refactor update beagle version

--- a/BeagleSampleIOS/Podfile
+++ b/BeagleSampleIOS/Podfile
@@ -5,7 +5,6 @@ target 'Beagle Sample' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
- 	pod 'BeagleUI', :git => 'https://github.com/ZupIT/beagle.git'
-	pod 'YogaKit', :git => 'https://github.com/lucasaraujo/yoga.git'	
-	pod 'SDWebImage', '~> 5.0'
+ 	pod 'Beagle'
+	pod 'YogaKit', :git => 'https://github.com/lucasaraujo/yoga.git'
 end
