--- a/BeagleSampleAndroid/app/build.gradle
+++ b/BeagleSampleAndroid/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
 
     // Kotlin Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    //Biometric
+    implementation "androidx.biometric:biometric:1.1.0"
 }
