--- a/BeagleSampleWeb/beagle-sample-web/package.json
+++ b/BeagleSampleWeb/beagle-sample-web/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
     "@zup-it/beagle-react": "^1.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
     "typescript": "^4.1.2",
