--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   Results:
     runs-on: ubuntu-latest
+    permissions:
+      repository-projects: read 
     steps:
       - run: docker run -e GITHUB_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }} gcr.io/openssf/scorecard:stable --show-details --repo=${{ github.repository }}
 
