--- a/BeagleSampleBackend/pom.xml
+++ b/BeagleSampleBackend/pom.xml
@@ -33,13 +33,14 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<kotlin.version>1.5.10</kotlin.version>
+		<spring-framework.version>5.3.18</spring-framework.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>br.com.zup.beagle</groupId>
 			<artifactId>beagle-spring-starter</artifactId>
-			<version>1.9.0</version>
+			<version>1.10.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
